--- a/Lektion13/Opgave13.2/index.html
+++ b/Lektion13/Opgave13.2/index.html
@@ -5,7 +5,7 @@
   <title>Chatklient</title>
   <link rel="stylesheet" href="opgave13.2.css" />
   <script src="get.js" defer></script>
-  <script src="opgave13.2.js" defer></script>
+  <script src="Opgave13.2.js" defer></script>
 </head>
 <body>
   <div id = 'rum'>
