--- a/Lektion17/Opgave12.2.html
+++ b/Lektion17/Opgave12.2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Chatklient</title>
   <link rel="stylesheet" href="opgave12.1.css" />
-  <script src="opgave12.2.js" defer></script>
+  <script src="Opgave12.2.mjs" defer></script>
 </head>
 <body>
   <div id = 'rum'>
